Bug fix for jobs page overlap. Clean up of nav and header.

--- a/src/app/components/jobs/jobs.component.css
+++ b/src/app/components/jobs/jobs.component.css
@@ -34,8 +34,12 @@
     margin-right: 1px;
 }
 
-/* Mobile */
-@media only screen and (max-width: 600px) {
+  .jobsContainer .list-group-item:last-child {
+    margin-bottom: 30px;
+  }
+
+/* Mobile and medium sized screens */
+@media only screen and (max-width: 992px) {
     .jobsContainer {
         margin-left: 20px;
         margin-right: 20px;
